:lipstick: corrected scrollbar on x axis

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,8 @@
 @import '~antd/dist/antd.css';
 
-html, body {
+body {
   min-width: 100vw;
   min-height: 100vh;
-}
-
-body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
